# randl

./: Cargo.toml  README.md
.github/workflows/: rust_build.yml
randl/: Cargo.toml  test.kdl
randl-cli/: Cargo.toml
randl-cli/src/: main.rs
randl-core/: Cargo.toml
randl-core/src/: error.rs  eval.rs  lib.rs  parser.rs
randl-plugin/: Cargo.toml  Xargo.toml
randl-plugin/src/: lib.rs
randl/randl-cli/: Cargo.toml  fe_shrine.kdl  fe_shrine.stdat  fe_shrine_out.stdat
randl/randl-cli/src/: main.rs
randl/randl-core/: Cargo.toml
randl/randl-core/src/: error.rs  eval.rs  lib.rs  parser.rs
src/: main.rs
