[package]
name = "randl-core"
version = "0.1.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

[dependencies]
#kdl = "1.0.0"
kdl = { git = "https://github.com/jam1garner/kdl-rs", branch = "fix_num_parsing" }
prc-rs = "1.3.2"
thiserror = "1.0.24"
#rand = "0.8.3"

rand = { git = "https://github.com/skyline-rs/rand" }
